[gd_scene load_steps=12 format=3 uid="uid://b8w8gbtnm42q7"]

[ext_resource type="Script" uid="uid://bjmkt0u31kwlj" path="res://scenes/game/game.gd" id="1_87uf6"]
[ext_resource type="PackedScene" uid="uid://d05xsrxdp6exu" path="res://scenes/entities/player/player.tscn" id="3_4j704"]
[ext_resource type="PackedScene" uid="uid://paxjg7vp5m3i" path="res://scenes/entities/enemies/enemy_generator.tscn" id="5_5jirj"]
[ext_resource type="Script" uid="uid://b6qns4sqyahov" path="res://scenes/ui/inventory/inventory_container.gd" id="6_bdhmt"]
[ext_resource type="Script" uid="uid://w8ij1gxya8a3" path="res://scenes/ui/stats/stats_container.gd" id="6_kp23o"]
[ext_resource type="Script" uid="uid://dhnwgxltb5676" path="res://scenes/ui/ui.gd" id="6_vaxfo"]
[ext_resource type="Script" uid="uid://co6g0omtsauln" path="res://scenes/ui/stats/health_bar.gd" id="7_ftsea"]
[ext_resource type="Script" uid="uid://dffd6d76nt3w1" path="res://scenes/ui/popup_ui.gd" id="8_87uf6"]
[ext_resource type="Script" uid="uid://bkjvlxjha3dst" path="res://scenes/ui/typing/text_controller.gd" id="8_otnwt"]
[ext_resource type="PackedScene" uid="uid://cw57nevfwt3nl" path="res://scenes/menu/menu_text_controller.tscn" id="9_2a8rs"]
[ext_resource type="Theme" uid="uid://cad7ye5r222e4" path="res://assets/menu/GamePanels.tres" id="10_4j704"]

[node name="Game" type="Node2D"]
z_as_relative = false
script = ExtResource("1_87uf6")

[node name="TilesViewportContainer" type="SubViewportContainer" parent="."]
y_sort_enabled = true
offset_right = 320.0
offset_bottom = 180.0

[node name="TilesViewport" type="SubViewport" parent="TilesViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="YSort" type="Node2D" parent="TilesViewportContainer/TilesViewport"]
y_sort_enabled = true

[node name="EnemyGenerator" parent="TilesViewportContainer/TilesViewport/YSort" instance=ExtResource("5_5jirj")]

[node name="ItemDrops" type="Node2D" parent="TilesViewportContainer/TilesViewport/YSort"]
y_sort_enabled = true

[node name="Player" parent="TilesViewportContainer/TilesViewport/YSort" instance=ExtResource("3_4j704")]

[node name="Camera" type="Camera2D" parent="TilesViewportContainer/TilesViewport/YSort/Player"]
position = Vector2(112, 6)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_vaxfo")

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HealthBar" type="Control" parent="UI/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 60.0
script = ExtResource("7_ftsea")

[node name="HealthLabel" type="Label" parent="UI/Control/HealthBar"]
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 100.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
vertical_alignment = 1

[node name="StatsContainer" type="GridContainer" parent="UI/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 142.0
offset_bottom = 174.0
columns = 2
script = ExtResource("6_kp23o")

[node name="HealthRegenLabel" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "Health Regen:"

[node name="HealthRegenLabelValue" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "0"

[node name="AttackLabel" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "Attack:"

[node name="AttackLabelValue" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "0"

[node name="SpeedLabel" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "Speed:"

[node name="SpeedLabelValue" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "0"

[node name="LuckLabel" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "Luck:"

[node name="LuckLabelValue" type="Label" parent="UI/Control/StatsContainer"]
layout_mode = 2
text = "0"

[node name="InventoryContainer" type="VBoxContainer" parent="UI/Control"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = -40.0
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1
script = ExtResource("6_bdhmt")

[node name="TextController" type="Node" parent="."]
script = ExtResource("8_otnwt")

[node name="PopupUI" type="CanvasLayer" parent="."]
process_mode = 2
script = ExtResource("8_87uf6")

[node name="MenuTextController" parent="PopupUI" instance=ExtResource("9_2a8rs")]

[node name="GameOverPanel" type="Panel" parent="PopupUI"]
visible = false
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_4j704")

[node name="GameOverLabel" type="Label" parent="PopupUI/GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 10.0
offset_right = 46.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Game Over!"
horizontal_alignment = 1

[node name="STATSPLACEHOLDER" type="Node" parent="PopupUI/GameOverPanel"]

[node name="ExitButton" type="Button" parent="PopupUI/GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -70.0
offset_right = 65.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="VictoryPanel" type="Panel" parent="PopupUI"]
visible = false
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_4j704")

[node name="VictoryPanel" type="Label" parent="PopupUI/VictoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 10.0
offset_right = 46.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Run Completed!"
horizontal_alignment = 1

[node name="STATSPLACEHOLDER" type="Node" parent="PopupUI/VictoryPanel"]

[node name="ExitButton" type="Button" parent="PopupUI/VictoryPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -70.0
offset_right = 65.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="ModifierPanel" type="Panel" parent="PopupUI"]
visible = false
custom_minimum_size = Vector2(600, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_4j704")

[node name="ModifierLabel" type="Label" parent="PopupUI/ModifierPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 10.0
offset_right = 46.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Choose a modifier"
horizontal_alignment = 1

[node name="Modifiers" type="HBoxContainer" parent="PopupUI/ModifierPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkipButton" type="Button" parent="PopupUI/ModifierPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -70.0
offset_right = 65.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="PopupUI/GameOverPanel/ExitButton" to="PopupUI" method="_on_exit_game_menu"]
[connection signal="pressed" from="PopupUI/VictoryPanel/ExitButton" to="PopupUI" method="_on_exit_game_menu"]
[connection signal="pressed" from="PopupUI/ModifierPanel/SkipButton" to="PopupUI" method="_skip_modifier"]
